Added the styles on CSS

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,1 +1,34 @@
+body {
+  background-color: #f8e8a6;
+  color: #333332;
+}
 
+header {
+  display: block;
+  text-align: center;
+  margin: 40px;
+}
+
+header a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #6da832;
+}
+
+header a:hover {
+  text-decoration: underline;
+}
+
+h1,
+p {
+  text-align: center;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+}
